# skirt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/arch/avr/sk/: arch.h  types.h
include/sk/: ipc.h  serial.h  skirt.h  task.h
src/examples/: mails.c  priority.c  semaphores.c
src/sk/: ipc.c  skirt.c  task.c
src/sk/arch/avr/: avr.c
src/test/: test.c
